[gd_scene load_steps=9 format=3 uid="uid://dd6skvb0tvmwh"]

[ext_resource type="PackedScene" uid="uid://e1xclsgg6q2s" path="res://agents/agent.tscn" id="1_bidh0"]
[ext_resource type="Script" path="res://agents/PlayerAgent.gd" id="1_pawbk"]
[ext_resource type="Shader" path="res://movement_prediction_line.gdshader" id="2_yuxfm"]
[ext_resource type="Texture2D" uid="uid://bw5o7xbm5rwjg" path="res://projection-line.png" id="3_0xy6o"]
[ext_resource type="Script" path="res://MovementPredictionLine.gd" id="4_b3vqi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1efxl"]
shader = ExtResource("2_yuxfm")
shader_parameter/scrolling_speed = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gh628"]
radius = 6.50077

[sub_resource type="CircleShape2D" id="CircleShape2D_hdpcg"]

[node name="PlayerAgent" instance=ExtResource("1_bidh0")]
script = ExtResource("1_pawbk")

[node name="MovementPredictionLine" type="Line2D" parent="." index="2"]
material = SubResource("ShaderMaterial_1efxl")
texture = ExtResource("3_0xy6o")
texture_mode = 1
script = ExtResource("4_b3vqi")

[node name="CollisionCheck" type="CharacterBody2D" parent="MovementPredictionLine" index="0"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementPredictionLine/CollisionCheck" index="0"]
shape = SubResource("CircleShape2D_gh628")

[node name="TouchScreenButton" type="TouchScreenButton" parent="." index="3"]
scale = Vector2(6, 6)
shape = SubResource("CircleShape2D_hdpcg")
shape_visible = false

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_touch_screen_button_released"]
